# ccv

./: CCV.cpp  CCV.hpp  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.hpp  Main.cpp  README
